2005-11-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.5.2
	* NEWS : Updated

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2005-10-27  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* configure.in : Added a new EDS_BASE_VERSION variable
	* storage/GNOME_Evolution_Exchange_Storage.server.in.in : Use 
	EDS_BASE_VERSION for the calendar and addressbook factory interfaces
	* storage/Makefile.am : Add a rule to substitute it in the server file.

2005-10-27  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Use 2.6 as the evolution api version. Fixes a build 
	break.

2005-10-24  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.5.1
	* NEWS : Updated

2005-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c
	(e_book_backend_exchange_remove) : Check for the proper return values
	from the server and return the appropriate status back.
	* calendar/e-cal-backend-exchange.c (remove_calendar) : Similar
	* mail/mail-stub-exchange.c (delete_folder) : Similar
	This fixes #312848.

2005-10-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in:
	Added 'th' (Thai) to ALL_LINGUAS.

2005-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-migrate.c : Small typo. Fixes #302378

2005-09-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-store.c (make_folder_info): Strip the semicolon
	from the uri. And also create the folder path properly.
	* storage/exchange-component.c (impl_upgradeFromVersion)
	(config_listener_account_created): Create the account_filename
	separately now.
	(exchange_component_get_account_for_uri): Synchronise the rescan tree
	with a lock
	* storage/exchange-config-listener.c (update_foreign_uri)
	(migrate_foreign_hierarchy)(ex_set_relative_uri) : Added new
	(migrate_account_esource) : Update the new relative uri.