@@ -38,8 +38,6 @@ evolution_exchange_storage_SOURCES =				\
 	exchange-hierarchy-foreign.h				\
 	exchange-migrate.c					\
 	exchange-migrate.h					\
-	exchange-oof.c						\
-	exchange-oof.h						\
 	exchange-storage.c					\
 	exchange-storage.h					\
 	main.c							
